# A-share-monitor

./: .gitignore  LICENSE  README.md  monitor.py  monitor_with_line.py  utils.py
gnome-extension/: TESTING.md  extension.js  metadata.json  print.js  test_basic.js  test_functions.js  test_network.js
qt/: CMakeLists.txt  README.md  config_dialog.cpp  config_dialog.h  config_dialog.ui  config_parser.cpp  config_parser.h  data.cpp  data.h  data_only_mode.cpp  display_mode.cpp  display_mode.h  future_fetcher.cpp  iwyu.imp  line_chart_mode.cpp  logger.cpp  logger.h  macro.h  main.cpp  random_fetcher.cpp  ring_buffer.h  sina_fetcher.cpp  sina_fetcher.h  stock.config  stock.cpp  stock.h  stock_fetcher.cpp  stock_fetcher.h  utils.cpp  utils.h  widget.cpp  widget.h
